# LingYunFrp-Tauri-Client

./: .gitignore  README.md  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  update-version.cjs  vite.config.ts
.github/workflows/: main.yml
.husky/: pre-commit
scripts/: bump-version.cjs
src/: App.vue  main.ts
src-tauri/: .env  .gitignore  2  Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: .env  commands.rs  config.rs  lib.rs  main.rs
src/api/: virtualNetwork.ts  zerotier.ts
src/assets/styles/: login.scss  manageTunnel.scss
src/assets/styles/components/: userInfo.scss
src/components/: AppContent.vue  HomeMenu.vue  Login.vue  Register.vue  ResetPassword.vue  Statistic.vue  TopMenu.vue  UserInfo.vue
src/composables/: useVirtualNetworkManager.ts
src/constants/: theme.ts
src/net/: base.ts  index.ts
src/net/user/: forget.ts  getHitokoto.ts  login.ts  register.ts  sendCode.ts
src/router/: index.ts
src/shared/: menuOptions.ts
src/types/: User.ts  index.ts  proxy.ts  virtualNetwork.ts
src/views/: Dashboard.vue  Login.vue  NotFound.vue
src/views/Dashboard/: Cash.vue  IndexView.vue  Log.vue  Network.vue  Profile.vue  Settings.vue  UserProfile.vue  index.vue  realname.vue
src/views/Dashboard/proxies/: CreateTunnel.vue  ManagerTunnel.vue
