[package]
name = "lingyunfrp-tauri-client"
version = "0.1.4"
description = "凌云FRP图形化客户端，更方便使用"
authors = ["LYFRP"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
winreg = "0.55.0"
open = "5.3.2"
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.6.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.2.3"
dotenv = "0.15"
dotenvy = "0.15"
